# cogitator

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  NOTICE  README.md  RELEASE_NOTES.md  audit.toml  build.rs  cliff.toml  cogitator_paper.bib  cogitator_paper.tex  draft-noctem-cogitator-witness-protocol-00.xml  flake.nix  policy.toml  repro.sh
.github/workflows/: ci.yml  release.yml
docs/: Index.html
fixtures/: policy_allow_all.toml  policy_clawdbot_block.toml
goldens/: gauntlet_witness_root.txt  ordeal_witness_root.txt
paper/: MAKE_ARXIV_ZIP.md  Makefile  main.tex  paper.tex  references.bib
paper/figures/: pipeline.tikz
replay/run_0000/: chaos_profile.json  drift_report.json  hash_chain.txt  meta.json  nix_provenance.json  tool_transcript.json  witness_manifest.json  witness_root.txt
schemas/: agent_trace.schema.json  chaos_profile.schema.json  drift_report.schema.json  tool_transcript.schema.json  verify_report.schema.json  witness_manifest.schema.json
scripts/: check_action_pins.sh  check_gauntlet_root.sh  resolve_action_sha.sh  resolve_audit_check_sha.sh
spec/: COGITATOR_WITNESS_PROTOCOL.md
src/: agent.rs  bench.rs  canonical_json.rs  chaos.rs  demo.rs  determinism.rs  drift.rs  eval.rs  gauntlet.rs  hex.rs  io_utils.rs  lib.rs  llm.rs  main.rs  model.rs  nix_provenance.rs  ordeal.rs  policy.rs  report.rs  strict_json.rs  tooling.rs  trace.rs  tui.rs  verify.rs  witness.rs
tasks/: ordeal.json
tests/: canonicalization_spec.rs  conformance_corpus.rs  determinism_props.rs  ordeal.rs  policy_bail.rs  release_invariants.rs  replay_phantom.rs  run_json_outputs.rs  spec_consistency.rs  theme_invariance.rs  trace_streaming.rs  verify_expect_guard.rs  verify_recompute.rs  version_output.rs
tests/fixtures/canonical_json/: duplicate_keys.json  reject_float.json  valid_sorted_object.json
