[package]
name = "cogitator"
version = "0.1.0"
edition = "2021"
description = "Deterministic parallel evaluation harness with optional TUI inspection cockpit"
license = "MIT"

[features]
tui = ["dep:ratatui", "dep:crossterm"]

[dependencies]
anyhow = "1"
blake3 = "1.5"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
csv = "1.3"
rand = "0.8"
rayon = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"

ratatui = { version = "0.28", optional = true }
crossterm = { version = "0.28", optional = true, features = ["event-stream"] }

[dev-dependencies]
proptest = "1.4"
