[package]
name = "cogitator"
version = "2.0.0"
edition = "2021"
build = "build.rs"
description = "Deterministic AI agent evaluation harness with cryptographic witness chain and pre-call policy interception"
license = "MIT"

[features]
tui = ["dep:ratatui", "dep:crossterm"]

[dependencies]
anyhow = "1"
blake3 = "1.5"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
csv = "1.3"
rand = "0.8"
rayon = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
toml = { version = "0.8", features = ["parse"] }

ratatui = { version = "0.28", optional = true }
crossterm = { version = "0.28", optional = true, features = ["event-stream"] }

[dev-dependencies]
proptest = "1.4"
tempfile = "3.12"

[package.metadata.dist]
dist = true
installers = ["shell", "powershell"]
ci = ["github"]
